updated teacher and forum also
